--- a/assets/main.css
+++ b/assets/main.css
@@ -11,10 +11,10 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 
-.list-group-item a {
-  display: block;
-  margin-top: 1em;
-}
+// .list-group-item a {
+//   display: block;
+//   margin-top: 1em;
+// }
 
 .list-group-item a:hover {
   text-decoration: none;
