--- a/assets/main.css
+++ b/assets/main.css
@@ -6,7 +6,14 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
-  /* font-family: 'Source Code Pro', monospace; */
+}
+
+code {
+  font-family: 'Source Code Pro', monospace;
+}
+
+pre code {
+  font-size: 20px;
 }
 
 h1, h2 {
@@ -75,6 +82,19 @@ svg:hover {
 .jam-event-title h1 {
   margin-top: 0;
 }
+
 .jam-event-title h3 {
   margin-bottom: 0;
+}
+
+.jam-showcase-item {
+  border: 1px dotted #cccccc;
+  margin: 1em 0;
+  display: block;
+}
+
+.jam-showcase-item pre {
+  margin: 0;
+  padding: 1em;
+  display: block;
 }
